--- a/iPhone/index.html
+++ b/iPhone/index.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="myControllerContainer">
-    <p>Your id: <span id="my-id">...</span></p>
+    <small><p>Your id: <span id="my-id">...</span></p></small>
     <form id="make-call">
         <input type="text" placeholder="Join room..." id="join-room">
         <button type="submit">Join</button>
