--- a/iPhone/index.html
+++ b/iPhone/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="ja">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>SkyWay Handson</title>
+    <title>SkyWay Handson2</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
