--- a/iPhone/index.html
+++ b/iPhone/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="ja">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>SkyWay Handson2</title>
+    <title>SkyWay Handson3</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
@@ -14,7 +14,7 @@
 </div>
 
 <div class="myControllerContainer">
-    <small><p>Your id: <span id="my-id">...</span></p></small>
+    <p>Your id: <span id="my-id">...</span></p>
     <form id="make-call">
         <input type="text" placeholder="Join room..." id="join-room">
         <button type="submit">Join</button>
